# ghasem_clock

./: .gitignore  CMakeLists.txt  Dialog.cpp  Dialog.h  Dialog.ui  README.md
